# freqtrade

./: pyproject.toml  requirements.txt
.github/workflows/: ci.yml
build_helpers/: schema.json
freqtrade/: constants.py  freqtradebot.py  misc.py  wallets.py
freqtrade/config_schema/: config_schema.py
freqtrade/configuration/: config_secrets.py  config_validation.py
freqtrade/data/: metrics.py
freqtrade/data/btanalysis/: bt_fileutils.py
freqtrade/data/history/datahandlers/: idatahandler.py
freqtrade/exchange/: __init__.py  aster.py  common.py  exchange.py  exchange_utils.py  exchange_ws.py  grvt.py  hyperliquid.py  modetrade.py  woofipro.py
freqtrade/loggers/: __init__.py  sensitive_filter.py
freqtrade/optimize/: backtesting.py
freqtrade/persistence/: custom_data.py  trade_model.py
freqtrade/plugins/: pairlistmanager.py
freqtrade/plugins/pairlist/: HistoricalRocPairList.py  HistoricalVolumePairList.py
freqtrade/resolvers/: exchange_resolver.py
freqtrade/strategy/: interface.py
tests/: test_log_setup.py
tests/data/: test_btanalysis.py
tests/exchange/: test_aster.py  test_delisting_detection_simple.py  test_exchange.py  test_exchange_ws.py  test_modetrade_price_sanity.py
tests/exchange_online/: conftest.py
tests/freqtradebot/: test_stoploss_on_exchange.py
tests/optimize/: test_backtesting.py
tests/plugins/: test_historical_volume_pairlist.py  test_pairlist.py
tests/rpc/: test_rpc_apiserver.py
tests/testdata/: config.tests.json
